--- a/WEBBAGE /Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/WEBBAGE /Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -1,76 +1,89 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html lang="en">
 <head>
-
-    <title>SpreewaldGürken Holiday</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <title>Spreewald Gallery </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
-<body onload="displayHoliday() ; accesskey()">
+<body onload="accesskey()">
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
     <div tabindex="0">  
         <a href="../../Home/index.html" class="active" id="home">Home</a> 
     </div>
-    <div class="dropdown" tabindex="0" >
+     <div class="dropdown" tabindex="0">
         <div class="dropbtn"> 
-            <a href="../Home/Shop.html" id="Packages"> Packages </a>
+            <a href="../../Shop/Home/Shop.html" id="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="../Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
-            <a href="../Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../Hollydays/Hollydays.html" id="Holliday">Holiday</a>
-            <a href="../Sport/Sport.html" id="Sport">Sport</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
+            <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
+            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
+            <a href="../../Shop/Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" tabindex="0">
         <div class="dropbtn"> 
-            <a href="../../About%20the%20region/Description/Description.html" > About the region </a>
+            <a href="../Description/Description.html"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
-        <div class="dropdown-content">
-            <a href="../../About%20the%20region/Description/Description.html" id="Description">Description </a>
-            <a href="../../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
-            <a href="../../About%20the%20region/Video/video.html" id="video">Video</a>
-            <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
+        <div class="dropdown-content" tabindex="0">
+            <a href="../Description/Description.html" id="Description">Description </a>
+            <a href="#">Photos</a>
+            <a href="../Video/video.html" id="video">Video</a>
+            <a href="../wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0">
+    <div tabindex="0"> 
         <a href="../../AboutUs/AboutUs.html" id="About">About us</a> 
     </div>
-    <div tabindex="0"> 
+    <div tabindex="0">  
         <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a> 
     </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
+
+<!-- Section A -->
 
 <header>
     <ul class="breadcrumb">
         <li tabindex="0">
             <a href="../../Home/index.html">Home</a>
         </li>
-        <li tabindex="0">
-            <a href="../Home/Shop.html">Packages</a>
-        </li>
-        <li>Holliday</li>
+        <li>fotos</li>
     </ul>
-    <div class="content-wrap">
-        <h2 class="content-title"> We offer the best experience at affordable prices for you </h2>
-    </div>
 </header>
 
 <!-- Section B -->
 <main id="main">
-<div id="Triptable" >
-    <div>  
-        <table id="holiday"></table>
+    <div  class="galarie">
+        <div class="row">
+            <div class="column">
+                <img src="../../../img/images/12.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/1.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/13.jpg" style="width:100%" alt="">
+            </div>
+            <div class="column">
+                <img src="../../../img/images/14.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/2.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/3.jpg" style="width:100%" alt="">
+            </div>
+            <div class="column">
+                <img src="../../../img/images/4.jpeg" style="width:100%" alt="">
+                <img src="../../../img/images/15.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/5.jpg" style="width:100%" alt="">
+            </div>
+            <div class="column">
+                <img src="../../../img/images/33.png" style="width:100%" alt="">
+                <img src="../../../img/images/6.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/7.jpg" style="width:100%" alt="">
+            </div>
+        </div>
     </div>
-</div>
-<div>
     <section id="section-d" class="grid">
         <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
@@ -88,17 +101,17 @@
                 <span property="email">contact@spreewahld.de</span>
             </p>
         </div>
-
         <div class="box">
             <h2 class="content-title">About Our services</h2>
             <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.
             </p>
         </div>
     </section>
-</div>
 </main>
+
 <!-- Footer -->
 <footer id="main-footer" class="grid-grid">
+
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
         <li tabindex="0">
