--- a/WEBBAGE /Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
+++ b/WEBBAGE /Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Spreewaldgurcken Special Offers</title>
-    <meta charset="utf-8">
+    <title>Spreewald Wallpapers</title>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
-<body onload="accesskey();displaySport()">
-    
+<body onload="accesskey()">
+
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0"> 
+    <div tabindex="0" >
         <a href="../../Home/index.html" class="active" id="home">Home</a> 
     </div>
     <div class="dropdown" tabindex="0">
         <div class="dropbtn"> 
-            <a href="../Home/Shop.html" id="Packages"> Packages </a>
+            <a href="../../Shop/Home/Shop.html" id="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="SpecialOffers.html" id="Special">Special offers</a>
-            <a href="../Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../Hollydays/Hollydays.html" id="Holliday">Holiday</a>
-            <a href="../Sport/Sport.html" id="Sport">Sport</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
+            <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
+            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
+            <a href="../../Shop/Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" tabindex="0">
@@ -35,68 +35,60 @@
             <a href="../../About%20the%20region/Description/Description.html" id="Description">Description </a>
             <a href="../../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
             <a href="../../About%20the%20region/Video/video.html" id="video">Video</a>
-            <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
+            <a href="#">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0">  
-        <a href="../../AboutUs/AboutUs.html" id="About">About us</a>
+    <div tabindex="0" > 
+        <a href="../../AboutUs/AboutUs.html" id="About">About us</a> 
     </div>
-    <div tabindex="0"> 
-        <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a>
+   <div tabindex="0"> 
+       <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a> 
     </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
-    
+
 <!-- Section A -->
 <header>
     <ul class="breadcrumb">
         <li tabindex="0">
             <a href="../../Home/index.html">Home</a>
         </li>
-        <li tabindex="0">
-            <a href="../Home/Shop.html">Packages</a>
-        </li>
-        <li>Special offers</li>
+        <li>wallpaper</li>
     </ul>
-</header>
-
-<main>
-
-    <div id="showcase2" class="grid">
-        <div class="bg-image"> </div>
-        <div class="content-wrap">
-            <h1>Welcome to our Special offers </h1>
-            <p>You get 10 percent on all trips and meals.<br> our meals are prepared with organic crops freshly taken from the farm which makes them highly nutritious. <br>You also get pumpkin soup for free. Discover our special offers now!
-            </p>
-            <a href="../Hollydays/Hollydays.html" class="btn">Read More</a>
+<div class="slider">
+    <figure>
+        <div class="slide">
+            <img src="../../../img/image/ast-baume-boot-772429.jpg" alt="" >
         </div>
-    </div>
-
-<section id="section-c" class="grid">
-    <div class="content-wrap">
-        <h2 class="content-title">Spreewald Welcomes You</h2>
-        <p>The Spreewald Winter has its own charm. Experience an unforgettable winter holiday in the Spreewald! You can experience the white fairy-tale landscape in the Spreewald with mulled wine train rides or skating! Long-lasting frosty temperatures make the region a paradise for ice hikers and skaters. We exchange the common Ski slopes and Chairlifts experience with the unique extended winter walks on clear air, rides on the frozen sledges.<br>Enjoy every bit of wellness in the Spreewald and the soothing warmth of a bath or massages with Spreewald herbs. 
-        The winter holiday in the Spreewald is pure deceleration, because a relaxed silence is spreading throughout the region. Our special offers make the holiday booking easy.
-        </p>
-    </div>
-</section>
-
-<div id="showcase3" class="grid">
-    <div class="bg-image"> </div>
-    <div class="content-wrap">
-        <h1>Winter Boat rides in Spreewald</h1>
-        <p>
-            From November to March the Spreewald is winter season. In the cold season, the popular "Glühweinkahnfahrten", as the winter boat drives are called in the Spreewald, start only about twice a day at selected ports. We have cozy Blankets and hot drinks on board for cushion on this romantic winter boat trip through the snowy nature. Now in winter, the silence of nature is almost audible, because in the Spreewald it is very quiet after the peak season. Enjoy the uniqueness of a boat trip in the off-season, because you are almost alone on the rivers of the region.
-
-            Tip: Not all ports offer daily winter boat rides in the low season. Therefore, we recommend that prior to your arrival to the ports for "Glühweinkahnfahrten" in Spreewald ask for individual tours.You can find all these offers in sports
-        </p>
-        <a href="../Sport/Sport.html" class="btn">Read More</a>
-    </div>
+        <div class="slide">
+            <img src="../../../img/image/apfel-apple-brille-616835.jpg" alt="" >
+        </div>
+        <div class="slide">
+            <img src="../../../img/image/container-diat-einmachglas-279035.jpg" alt="" >
+        </div>
+        <div class="slide">
+            <img src="../../../img/image/essen-frisch-frucht-1656664.jpg" alt="" >
+        </div>
+        <div class="slide">
+            <img src="../../../img/image/ast-baume-boot-772429.jpg" alt="" >
+        </div>
+    </figure>
 </div>
 
-</main>
+</header>
 
 <!-- Section B -->
+<main id="section-c" class="grid">
+    <div class="content-wrap">
+        <h2 class="content-title">Our Story</h2>
+        <p>
+            Spreewaldgurken is a business founded by family, living in the region of Lübenau (Spreewald). <br>The residents of Spreewald before world war 2 housed visitors for at least a week for a small token as they guided them around the many tourist sites in the area. <br>With the growth of the Internet coupled with people's love for vacation, we setup this business to continue the tradition of old, to familiarize people with the beauty of Spreewald so they have the opportunity to get to know the hidden nature here.<br> Our main goal is to provide customers with a once in a lifetime experience for different budgets. <br>We have received customers from all parts of the world within the last 50 years.<br> We look forward to welcoming you!!!
+        </p>
+    </div>
+</main>
+
+
+<!-- Section C-->
 <div id="main">
     <section id="section-d" class="grid">
         <div class="box" vocab="http://schema.org/">
@@ -126,6 +118,7 @@
 
 <!-- Footer -->
 <footer id="main-footer" class="grid-grid">
+
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
         <li tabindex="0">
@@ -137,7 +130,7 @@
             <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
         </li>
         <li tabindex="0">
-            <a href='#' target='_blank'>
+            <a href='#' target='_blank' >
                 <span class="socicon-instagram"></span>
             </a>
         </li>
