--- a/WEBBAGE /Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/WEBBAGE /Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -1,109 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>SpreewaldgurckenGalrie</title>
+    <title>Spreewaldgurcken Day Trip</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <script src="../../../js/Script.js"></script>
 </head>
-<body onload="displayTrip()">
+<body onload="displayTrip();accesskey()">
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <a href="../../Home/index.html" class="active">Home</a>
-    <div class="dropdown">
-        <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
+    <div tabindex="0"> 
+        <a href="../../Home/index.html" class="active" id="home">Home</a> 
+    </div>
+    <div class="dropdown" tabindex="0">
+        <div class="dropbtn"> 
+            <a href="../Home/Shop.html" id="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
-            <a href="../Special%20offers/SpecialOffers.html">Special offers</a>
-            <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
-            <a href="../Hollydays/Hollydays.html">Holliday</a>
-            <a href="../Sport/Sport.html">Sport</a>
+            <a href="../Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
+            <a href="../Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
+            <a href="../Hollydays/Hollydays.html" id="Holliday">Holiday</a>
+            <a href="../Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
-    <div class="dropdown">
-        <button class="dropbtn"> About the region
+    <div class="dropdown" tabindex="0">
+        <div class="dropbtn"> 
+            <a href="../../About%20the%20region/Description/Description.html" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
-            <a href="../../Foto/Foto.html">fotos</a>
-            <a href="../../Video/video.html">video</a>
-            <a href="#">wallpaper</a>
+            <a href="../../About%20the%20region/Description/Description.html" id="Description">Description </a>
+            <a href="../../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
+            <a href="../../About%20the%20region/Video/video.html" id="video">Video</a>
+            <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <a href="../../AboutUs/AboutUs.html">About us</a>
-    <a href="../../Contact%20us%20/Contact.html">Contact us</a>
-
+    <div tabindex="0">
+        <a href="../../AboutUs/AboutUs.html" id="About">About us</a>
+    </div>
+    <div tabindex="0">
+        <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a>
+    </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
+<header tabindex="0">
+<div>
+    <ul class="breadcrumb">
+        <li tabindex="0">
+            <a href="../../Home/index.html">Home</a>
+        </li>
+        <li tabindex="0">
+            <a href="../Home/Shop.html">Packages</a>
+        </li>
+        <li>Daytrip</li>
+    </ul>
 
+</div>
 
-
-
+<div class="content-wrap">
+    <h2 class="content-title"> We offer the best experience at affordable prices for you</h2>
+</div>
+</header>
 
 <!-- Section C -->
 
-
-<main id="Triptable" >
-    <div>  <table id="demo"></table></div>
-
-</main>
-    <div class="content-wrap">
-        <h2 class="content-title"> wir freuen uns auf ihre Kontakt</h2>
-       <!-- <p> Swap the noise of the city for the rich sounds of nature. Come to the holiday in the Spreewald. In just a few hours, the best conditions for a journey to yourself. Discover your inner balance in the midst of nature. A Spreewald vacation has many faces. Whether active by bike or directly with the paddle boat on the classic waterways of the region. Time will come to life in the Spreewald. Do you keep moving on holiday? The region offers relaxation in wellness and SPA in comfortable hotels, not only in the spontaneous break and short break ...</p> -->
+<main id="main">
+<div id="Triptable" >
+    <div>  
+        <table id="demo"></table>
+    </div>
     </div>
 
-
-
-
-
-
 <!-- Section B -->
-<section id="main">
-    <section id="section-d" class="grid">
-        <div class="box">
+<section >
+    <div id="section-d" class="grid" tabindex="0" >
+        <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
-            <p>Hofladen in Klein Radden
-                Marktstände in Beuchow, Boblitz, Burg, Duben, Eichow, Erkner, Lauchhammer, Lübben, Ragow, Schöneiche und Schwarzheide.</p>
-            <p>contact@spreewahld.de</p>
+            <p typeof="Organization">
+                <span property="legalName">SpreeWaldGürcken GmbH</span><br>
+                <span property="address" typeof="PostalAddress">
+                    <span property="streetAddress">Karl-liebkenchtStr 102</span><br>
+                    <span property="addressLocality">Cottbus</span> -
+                    <span property="addressCountry" typeof="Country">Germany</span><br>
+                    <span property="postalCode">03046</span>
+                </span><br>Tel: 
+                <span property="telephone" content="+4911115551212">+49 1111-555-1212</span>
+            </p>
+            <p typeof="Organization">
+                <span property="email">contact@spreewahld.de</span>
+            </p>
         </div>
         <div class="box">
             <h2 class="content-title">About Our services</h2>
-            <p>You are on holiday in the Spreewald for the first time and do not know what you can do in your spare time? The tips below will help you plan your trip to the Spreewald better. Because in addition to paddling, cycling and the popular boat trips, there are many more recreational opportunities and destinations to discover.</p>
+            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.
+            </p>
         </div>
-    </section>
+    </div>
 </section>
 
-<!-- Footer -->
-<footer id="main-footer" class="grid-grid">
+</main>
 
+<!-- Footer -->
+
+<footer id="main-footer" class="grid-grid">
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
-        <li>
-            <a href='your_url_here' target='_blank'><span class="socicon-facebook"></span></a>
+        <li tabindex="0">
+            <a href='#' target='_blank' >
+                <span class="socicon-facebook"></span>
+            </a>
         </li>
-        <li>
-            <a href='your_url_here' target='_blank'><span class="socicon-instagram"></span></a>
+        <li tabindex="0">
+            <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
         </li>
-        <li>
-            <a href='your_url_here' target='_blank'><span class="socicon-twitter"></span></a>
+        <li tabindex="0">
+            <a href='#' target='_blank'>
+                <span class="socicon-instagram"></span>
+            </a>
         </li>
-        <li>
-            <a href='your_url_here' target='_blank'><span class="socicon-googleplus"></span></a>
-        </li>
-        <li>
-            <a href="../Home/Shop.html" > Packages </a>
-        </li>
-
     </ul>
-
-
-
 </footer>
-
+<script src="../../../js/Script.js"></script>
 </body>
 </html>
